--- a/task0/src/index.css
+++ b/task0/src/index.css
@@ -12,6 +12,14 @@ code {
     monospace;
 }
 
+#loading{
+  width: 100%;
+  height: 100vh;
+  background: white url('https://www.google.com/url?sa=i&url=https%3A%2F%2Floading.io%2Fspinner%2Fspinner%2F-spinner-preloader-ajax-loading-icon&psig=AOvVaw18FPs7jCHvpya84P6I5KVL&ust=1636205650902000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCJDX7YbMgvQCFQAAAAAdAAAAABAD')
+  no-repeat center;
+  z-index: 99999;
+}
+
 .heading_style {
   padding: 30px 0;
   text-align: center;
@@ -39,6 +47,16 @@ code {
   border-radius: 12px 12px 12px 12px;
   box-shadow: 0px 13px 10px -7px rgba(0, 0, 0, 0.1);
   float: left;
+}
+
+.User {
+  margin: 6%;
+  transition: all 0.4s cubic-bezier(0.175, 0.885, 0, 1);
+  background-color: rgb(233, 232, 232);
+  width: 21.25%;
+  border-radius: 12px 12px 12px 12px;
+  box-shadow: 0px 13px 10px -7px rgba(0, 0, 0, 0.1);
+  align-self: center;
 }
 
 .card:hover {
@@ -87,4 +105,33 @@ button {
   padding: 16px 24px 24px 24px;
   margin-left: 24px;
   margin-bottom: 16px;
+}
+
+.searchbar {
+  width: 50%;
+  height: auto;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.searchbar input {
+  margin: 30px 0;
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+
+a {
+  color: aqua;
+}
+a.active_class {
+  color: white;
+}
+.menu_style {
+  width: 100%;
+  line-height: 60px;
+  background-color: #20232a;
+  display: flex;
+  justify-content: space-around;
+
 }
