--- a/webpack_task1/src/main.css
+++ b/webpack_task1/src/main.css
@@ -27,19 +27,6 @@ body {
     margin-bottom: 30px;
   }
   
-  .usernotfound {
-    padding: 30px 0;
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-    text-transform: uppercase;
-    font-size: 13px;
-    letter-spacing: 2px;
-    font-weight: 500;
-    color:#868686;
-    background-color: white;
-    font-size: 1.5rem;
-    margin-bottom: 30px;
-  }
   .cards {
     width: 100%;
     height: auto;
@@ -154,4 +141,12 @@ body {
 
    .ant-input-group-addon {
      background-color: white;
+   }
+
+   .searchBar {
+     position: fixed;
+     z-index: 5;
+     right: 100px;
+     width: 50%;
+     margin-top: 0;
    }
