updating PR review suggesstions

--- a/src/index.less
+++ b/src/index.less
@@ -1,5 +1,5 @@
 body {
-    background-color: #99ddff;;
+    background-color: #185f83;
 }
 
 body {
@@ -119,7 +119,7 @@ body {
   }
   
   a {
-    color: aqua;
+    color: rgb(77, 134, 134);
   }
   
   a.active_class {
@@ -161,5 +161,5 @@ body {
    }
 
    .ant-card-bordered {
-     width: 240px;
+     width: 260px;
    }
