--- a/src/index.less
+++ b/src/index.less
@@ -163,3 +163,10 @@ body {
    .ant-card-bordered {
      width: 260px;
    }
+
+   .ant-typography {
+     margin-top: 10px;
+     margin-left: 0;
+     margin-right: 150;
+     margin-bottom: 10px;
+   }
